--- a/ureport/templates/ureport/responses_base.html
+++ b/ureport/templates/ureport/responses_base.html
@@ -1,6 +1,7 @@
 {% extends "generic/base.html" %}
+{% load i18n %}
 {% block title %}
-    Poll Responses - {{ block.super }}
+{% trans "Poll Responses " %}- {{ block.super }}
 {% endblock %}
 {% block stylesheets %}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css" />
