[Felix,Mj] Added support for internationalization of text in javascript files

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -12,6 +12,7 @@
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
 
     {% endblock %}
+    <script type="text/javascript" src="/jsi18n/ureport/"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.min.js?11"></script>
 
