--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -1,6 +1,7 @@
 {% extends "ureport_layout.html" %}
 {% block page_title %} About Ureport {% endblock %}
 {% load i18n %}
+{% load captureas %}
 {% block sidecontent %}
     <div class="why-join">
         <div class="why-placeholder">
@@ -8,11 +9,12 @@
         </div>
 
 	<div class="blacktext">
+       {% captureas country_trans %}{% trans "Uganda" %}{% endcaptureas %}
        {% blocktrans %}<ul>
 	    <li>Speak out on what's happening in your community</li>
 	    <li>Use Ureport results and information to update and increase citizen's awareness</li>
 	    <li>Participate in nationwide campaigns to help improve your country</li>
-	    <li>Share what's happening around Uganda with other Ureporters</li>
+	    <li>Share what's happening around {{ country_trans }} with other Ureporters</li>
 	</ul>{% endblocktrans %}
 	</div>
     </div>
@@ -25,8 +27,9 @@
 
         <div class="page">
             <p>
-		{% blocktrans %}Ureport is a free SMS-based system that allows
-                young Ugandans to speak out on what's happening in
+            {% captureas citizens_trans %}{% trans "Ugandans" %}{% endcaptureas %}
+		    {% blocktrans %}Ureport is a free SMS-based system that allows
+                young {{ citizens_trans }} to speak out on what's happening in
                 communities across the country, and work together
 		with other community leaders for positive change.{% endblocktrans %}
             </p>
